rcdir = $(sysconfdir)/xdg/$(PACKAGE_NAME)

dist_rc_DATA = tint2rc

if INSTALL_EXAMPLES
examplesdir = $(docdir)/examples
dist_examples_DATA = default.tint2rc \
					 vertical_icon_only.tint2rc \
					 rounded_multi_desktop.tint2rc \
					 black_single_desktop.tint2rc \
					 horizontal_icon_only.tint2rc \
					 white_single_desktop.tint2rc
else
examplesdir =
dist_examples_DATA =
endif

