rcdir = $(sysconfdir)/xdg/$(PACKAGE_NAME)

dist_rc_DATA = tint2rc

if INSTALL_EXAMPLES
examplesdir = $(docdir)/examples
dist_examples_DATA = icon_and_text_1.tint2rc \
					 icon_and_text_2.tint2rc \
					 icon_and_text_3.tint2rc \
					 icon_and_text_4.tint2rc \
					 icon_only_1.tint2rc \
					 icon_only_2.tint2rc \
					 icon_only_3.tint2rc \
					 icon_only_4.tint2rc \
					 icon_only_6.tint2rc \
					 icon_only_7.tint2rc \
					 text_only_1.tint2rc \
					 text_only_2.tint2rc \
					 text_only_3.tint2rc \
					 text_only_4.tint2rc \
					 text_only_5.tint2rc \
					 text_only_6.tint2rc
else
examplesdir =
dist_examples_DATA =
endif

